--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,29 @@ wheels/
 
 # Virtual environments
 .venv
+
+# Next.js
+.next/
+out/
+node_modules/
+
+# Dependencies
+package-lock.json
+yarn.lock
+pnpm-lock.yaml
+
+# Environment variables
+.env
+.env*.local
+
+# Debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# TypeScript
+*.tsbuildinfo
+next-env.d.ts
+
+# Vercel
+.vercel
